--- a/App Domain/App Domain.csproj
+++ b/App Domain/App Domain.csproj
@@ -92,6 +92,7 @@
     <Compile Include="SQL.cs" />
     <EmbeddedResource Include="AddAccount.resx">
       <DependentUpon>AddAccount.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="AddAccountType.resx">
       <DependentUpon>AddAccountType.cs</DependentUpon>
