Added balance column to CoA. Makes retrieving account balance (and therefore statements) much faster. Posting a journal entry updates the balance. Removed a few date columns since changes are tracked in Changes

--- a/App Domain/App Domain.csproj
+++ b/App Domain/App Domain.csproj
@@ -47,9 +47,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Fastbooks.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\FastBooksICO.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -120,6 +121,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -132,7 +134,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Fastbooks.ico" />
+    <None Include="Resources\FastBooksICO.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
